--- a/01. Partie législative/Article L90 - 6362858.md
+++ b/01. Partie législative/Article L90 - 6362858.md
@@ -1,7 +1,7 @@
 # Article L90
 
 La pension et la rente viagère d'invalidité sont payées mensuellement et à terme échu dans les conditions déterminées par un
-règlement d'administration publique.
+décret en Conseil d'Etat.
 
 La mise en paiement, portant rappel du jour de l'entrée en jouissance, doit être obligatoirement effectuée à la fin du
 premier mois suivant le mois de cessation de l'activité.
@@ -17,10 +17,6 @@ _Cité par_:
   - Décret n°2008-639 du 30 juin 2008 - art. 24 (VD)
   - Code des pensions civiles et militaires de retr... - art. R*101 (V)
   - Code des pensions civiles et militaires de retr... - art. R*102 (V)
-
-_Modifié par_:
-
-  - Loi n°74-1129 1974-12-30 art. 62 JORF 31 décembre 1974
 
 _Codifié par_:
 
