--- a/01. Partie législative/Article L96 - 6362869.md
+++ b/01. Partie législative/Article L96 - 6362869.md
@@ -2,25 +2,25 @@
 
 La caisse nationale d'épargne et les caisses de crédit municipal sont autorisées à consentir aux pensionnaires bénéficiaires
 du présent code, sur le trimestre en cours de leur pension civile ou militaire, des avances représentant les arrérages courus
-d'un ou de deux mois.
+d'un ou de deux mois. 
 
 Les dispositions de l'article L. 56 ne sont pas opposables à ces établissements pour le remboursement des avances ainsi
-faites.
+faites. 
 
 Le mode suivant lequel le Trésor couvre la caisse nationale d'épargne et les caisses de crédit municipal de leurs avances est
-déterminé par règlement d'administration publique.
+déterminé par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Code des pensions civiles et militaires de retrait - art. L56 (M)
-
 _Cité par_:
 
+  - Loi n°64-1339 du 26 décembre 1964 - art. 3 (V)
   - Code des pensions civiles et militaires de retrait - art. L94 (V)
   - Code des pensions civiles et militaires de retrait - art. R*105 (Ab)
-  - Loi n°64-1339 du 26 décembre 1964 - art. 3 (V)
+
+_Cite_:
+
+  - Code des pensions civiles et militaires de retr... - art. L56 (V)
 
 _Codifié par_:
 
