--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R*81 - 6363039.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R*81 - 6363039.md
@@ -8,7 +8,7 @@ Les offices et établissements autonomes sont astreints, en contrepartie, à ver
 1° Le montant de la retenue effectuée sur le traitement de l'agent en exécution de l'article L. 61 ;
 
 2° Une contribution aux charges résultant pour l'Etat de la constitution de la pension dont le taux est fixé forfaitairement
-à 25 p. 100 du montant des émoluments soumis à retenues.
+à 26,6 p. 100 du montant des émoluments soumis à retenues.
 
 **Liens relatifs à cet article**
 
@@ -25,13 +25,13 @@ _Codifié par_:
 
   - Décret n°66-809 1966-10-28
 
-_Modifié par_:
-
-  - Décret n°89-225 1989-04-12 art. 1 JORF 18 avril 1989
-
 **Liens**:
 
   - SPEC_APPLI: Décret n°89-225 1989-04-12 art. 2
+
+_Modifié par_:
+
+  - Décret n°91-442 du 14 mai 1991 - art. 3 (V) JORF 16 mai 1991 en vigueur le 1er février 1991
 
 _Cite_:
 
