--- a/01. Partie législative/Article 0L2 - 6362662.md
+++ b/01. Partie législative/Article 0L2 - 6362662.md
@@ -2,8 +2,9 @@
 
 Ont droit au bénéfice des dispositions du présent code :
 
-1° Les fonctionnaires civils auxquels s'applique l'ordonnance n° 59-244 du 4 février 1959 relative au statut général des
-fonctionnaires ;
+1° Les fonctionnaires civils auxquels s'appliquent les lois n° 83-634 du 13 juillet 1983 portant droits et obligations des
+fonctionnaires et n° 84-16 du 11 janvier 1984 portant dispositions statutaires relatives à la fonction publique de l'Etat,
+relatives aux titres Ier et II du statut général des fonctionnaires ;
 
 2° Les magistrats de l'ordre judiciaire ;
 
@@ -14,10 +15,6 @@ d'un contrat ;
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Ordonnance 59-244 1959-02-04
-
 _Cité par_:
 
   - Code des pensions civiles et militaires de retr... - art. L61 (V)
@@ -26,3 +23,12 @@ _Cité par_:
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Cite_:
+
+  - Loi n°83-634 1983-07-13
+  - Loi n°84-16 1984-01-11
+
+_Modifié par_:
+
+  - Loi n°91-715 du 26 juillet 1991 - art. 6 () JORF 27 juillet 1991
