--- a/01. Partie législative/Article L20 - 6362718.md
+++ b/01. Partie législative/Article L20 - 6362718.md
@@ -1,7 +1,8 @@
 # Article L20
 
 En aucun cas, la pension allouée au titre de la durée des services ne peut être inférieure à celle qu'aurait obtenue le
-titulaire s'il n'avait pas été promu à un emploi ou grade supérieur.
+titulaire s'il n'avait pas été promu à un emploi ou à un grade supérieur ou reclassé en vertu des dispositions de l'article
+63 de la loi n° 84-16 du 11 janvier 1984 portant dispositions statutaires relatives à la fonction publique de l'Etat.
 
 **Liens relatifs à cet article**
 
@@ -12,3 +13,11 @@ _Codifié par_:
 _Cité par_:
 
   - Loi n°64-1339 du 26 décembre 1964 - art. 3 (V)
+
+_Cite_:
+
+  - Loi n°84-16 du 11 janvier 1984 - art. 63 (V)
+
+_Modifié par_:
+
+  - Loi n°91-715 du 26 juillet 1991 - art. 6 () JORF 27 juillet 1991
