--- a/01. Partie législative/Article L65 - 6362812.md
+++ b/01. Partie législative/Article L65 - 6362812.md
@@ -1,13 +1,13 @@
 # Article L65
 
-Sous réserve que les dispositions de l'article L. 60 ne soient pas applicables, le fonctionnaire civil ou le militaire qui
-vient à quitter le service, pour quelque cause que ce soit, sans pouvoir obtenir une pension ou une solde de réforme, est
-rétabli, en ce qui concerne l'assurance vieillesse, dans la situation qu'il aurait eue s'il avait été affilié au régime
-général des assurances sociales pendant la période où il a été soumis au présent régime.
+Le fonctionnaire civil ou le militaire qui vient à quitter le service, pour quelque cause que ce soit, sans pouvoir obtenir
+une pension ou une solde de réforme est rétabli, en ce qui concerne l'assurance vieillesse, dans la situation qu'il aurait
+eue s'il avait été affilié au régime général des assurances sociales et à l'institution de retraite complémentaire des agents
+non titulaires de l'Etat et des collectivités locales (Ircantec) pendant la période où il a été soumis au présent régime.
 
-Sous la même réserve que celle prévue à l'alinéa précédent, l'agent non susceptible de bénéficier de l'affiliation
-rétroactive au régime général des assurances sociales pour tout ou partie de sa carrière peut prétendre, au titre des mêmes
-périodes, au remboursement direct et immédiat des retenues subies d'une manière effective sur son traitement ou sa solde.
+L'agent non susceptible de bénéficier de l'affiliation rétroactive au régime général des assurances sociales pour tout ou
+partie de sa carrière peut prétendre, au titre des mêmes périodes, au remboursement direct et immédiat des retenues subies
+d'une manière effective sur son traitement ou sa solde.
 
 Les mêmes dispositions sont applicables au fonctionnaire civil ou militaire qui, après avoir quitté le service, reprend un
 emploi relevant du régime institué par le présent code, sans pouvoir obtenir une pension ou une solde de réforme au titre
@@ -15,9 +15,13 @@ dudit emploi.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Codifié par_:
 
-  - Loi n°64-1339 1964-12-26 JORF 30 décembre 1964 rectificatif JORF 10 janvier 1965 en vigueur le 1er décembre 1964
+  - Loi n°64-1339 1964-12-29
+
+_Modifié par_:
+
+  - Loi n°91-715 du 26 juillet 1991 - art. 6 () JORF 27 juillet 1991
 
 _Cité par_:
 
@@ -27,11 +31,3 @@ _Cité par_:
   - Code des pensions civiles et militaires de retr... - art. D30 (V)
   - Code des pensions civiles et militaires de retr... - art. R*59 (V)
   - Code des pensions civiles et militaires de retrait - art. L7 (V)
-
-_Cite_:
-
-  - Code des pensions civiles et militaires de retrait - art. L60 (Ab)
-
-_Codifié par_:
-
-  - Loi n°64-1339 1964-12-29
