--- a/01. Partie législative/Article L27 - 6362741.md
+++ b/01. Partie législative/Article L27 - 6362741.md
@@ -1,18 +1,14 @@
 # Article L27
 
 Le fonctionnaire civil qui se trouve dans l'incapacité permanente de continuer ses fonctions en raison d'infirmités résultant
-de blessures ou de maladies contractées ou aggravées, soit en service, soit en accomplissant un acte de dévouement dans un
-intérêt public, soit en exposant ses jours pour sauver la vie d'une ou plusieurs personnes, peut être radié des cadres par
-anticipation, soit sur sa demande, soit d'office à l'expiration d'un délai de douze mois à compter de sa mise en congé si
-cette dernière a été prononcée en application de l'article 36 (2°) de l'ordonnance du 4 février 1959 relative au statut
-général des fonctionnaires ou à la fin du congé qui lui a été accordé en application de l'article 36 (3°) de ladite
-ordonnance.
+de blessures ou de maladie contractées ou aggravées soit en service, soit en accomplissant un acte de dévouement dans un
+intérêt public, soit en exposant ses jours pour sauver la vie d'une ou plusieurs personnes et qui n'a pu être reclassé dans
+un autre corps en application de l'article 63 de la loi n° 84-16 du 11 janvier 1984 précitée peut être radié des cadres par
+anticipation soit sur sa demande, soit d'office à l'expiration d'un délai de douze mois à compter de sa mise en congé si
+cette dernière a été prononcée en application des 2° et 3° de l'article 34 de la même loi ou à la fin du congé qui lui a été
+accordé en application du 4° du même article.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - Ordonnance 59-244 1959-02-04 art. 36
 
 _Cité par_:
 
@@ -71,3 +67,12 @@ _Cité par_:
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Cite_:
+
+  - Loi n°84-16 1984-01-11 art. 63, art. 34
+  - Loi n°84-16 du 11 janvier 1984 - art. 63 (V)
+
+_Modifié par_:
+
+  - Loi n°91-715 du 26 juillet 1991 - art. 6 () JORF 27 juillet 1991
