--- a/01. Partie législative/Article L94 - 6362864.md
+++ b/01. Partie législative/Article L94 - 6362864.md
@@ -11,10 +11,14 @@ l'affichage du jugement et son insertion par extrait dans un ou plusieurs journa
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Code des pensions civiles et militaires de retrait - art. L96 (M)
-
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Modifié par_:
+
+  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+_Cite_:
+
+  - Code des pensions civiles et militaires de retrait - art. L96 (M)
