--- a/01. Partie législative/Article L55 - 6362794.md
+++ b/01. Partie législative/Article L55 - 6362794.md
@@ -12,6 +12,8 @@ La restitution des sommes payées indûment au titre de la pension ou de la rent
 exigible lorsque l'intéressé était de mauvaise foi. Cette restitution est, en tant que de besoin, poursuivie par l'agent
 judiciaire du Trésor.
 
+La pension des militaires n'est pas assimilée à un avantage vieillesse avant l'âge de soixante ans.
+
 **Liens relatifs à cet article**
 
 _Cité par_:
@@ -20,10 +22,10 @@ _Cité par_:
   - Décret n°2003-1306 du 26 décembre 2003 - art. 62 (V)
   - Décret n°2012-1256 du 13 novembre 2012 - art. 7 (V)
 
-_Modifié par_:
-
-  - Loi n°77-574 1977-06-07 art. 22 JORF 8 juin 1977 rectificatif JORF 21 juin 1977
-
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Modifié par_:
+
+  - Loi n°96-1111 1996-12-16 art. 9 jorf 20 décembre 1996
