--- a/01. Partie législative/Article 0L2 - 6362662.md
+++ b/01. Partie législative/Article 0L2 - 6362662.md
@@ -1,24 +1,20 @@
 # Article L2
 
-Ont droit au bénéfice des dispositions du présent code :
+Ont droit au bénéfice des dispositions du présent code : 
 
 1° Les fonctionnaires civils auxquels s'appliquent les lois n° 83-634 du 13 juillet 1983 portant droits et obligations des
 fonctionnaires et n° 84-16 du 11 janvier 1984 portant dispositions statutaires relatives à la fonction publique de l'Etat,
-relatives aux titres Ier et II du statut général des fonctionnaires ;
+relatives aux titres Ier et II du statut général des fonctionnaires ; 
 
-2° Les magistrats de l'ordre judiciaire ;
+2° Les magistrats de l'ordre judiciaire ; 
 
 3° Les militaires de tous grades possédant le statut de militaires de carrière ou servant au-delà de la durée légale en vertu
-d'un contrat ;
+d'un contrat et les militaires servant au titre d'un engagement à servir dans la réserve opérationnelle ou au titre de la
+disponibilité ; 
 
 4° Leurs conjoints survivants et leurs orphelins.
 
 **Liens relatifs à cet article**
-
-_Cité par_:
-
-  - Code des pensions civiles et militaires de retr... - art. L61 (V)
-  - Code des pensions civiles et militaires de retr... - art. R1 (V)
 
 _Codifié par_:
 
@@ -26,9 +22,14 @@ _Codifié par_:
 
 _Cite_:
 
-  - Loi n°83-634 1983-07-13
-  - Loi n°84-16 1984-01-11
+  - Loi n°83-634 du 13 juillet 1983 (V)
+  - Loi n°84-16 du 11 janvier 1984 (V)
 
 _Modifié par_:
 
-  - Loi n°91-715 du 26 juillet 1991 - art. 6 () JORF 27 juillet 1991
+  - Loi n°99-894 du 22 octobre 1999 - art. 51 () JORF 23 octobre 1999
+
+_Cité par_:
+
+  - Code des pensions civiles et militaires de retr... - art. L61 (V)
+  - Code des pensions civiles et militaires de retr... - art. R1 (V)
