--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R46 - 6362972.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R46 - 6362972.md
@@ -7,7 +7,7 @@ judiciaire, composée comme suit :
 
 - le directeur ou chef de corps ou de service dont dépend l'intéressé, ou son représentant, président ;
 
-- le contrôleur financier ou son représentant ;
+- le membre du corps du contrôle général économique et financier ou son représentant ;
 
 - deux représentants, titulaires ou éventuellement suppléants, des membres du Conseil d'Etat ou des magistrats à l'égard
 desquels la commission est compétente et qui sont désignés par leurs collègues dans les conditions fixées par arrêté du garde
@@ -52,11 +52,6 @@ _Codifié par_:
 
   - Décret n°66-809 1966-10-28
 
-_Modifié par_:
-
-  - Décret n°71-74 1971-01-21 art. 2 JORF 28 janvier 1971
-  - Décret n°86-626 1986-03-18 art. 2 JORF 20 mars 1986
-
 _Cite_:
 
   - Décret n°86-442 1986-03-14 art. 5 et 6
@@ -65,3 +60,7 @@ _Cité par_:
 
   - Décret n°86-442 du 14 mars 1986 - art. 10 (V)
   - Arrêté du 5 octobre 1987 - art. 1 (V)
+
+_Modifié par_:
+
+  - Décret n°2005-436 du 9 mai 2005 - art. 19 (V) JORF 10 mai 2005
