--- a/01. Partie législative/Article L49 - 6362784.md
+++ b/01. Partie législative/Article L49 - 6362784.md
@@ -1,9 +1,8 @@
 # Article L49
 
-Les ayants cause des militaires visés à l'article L. 7 qui sont décédés titulaires d'une solde de réforme bénéficient, s'ils
-satisfont aux conditions prévues à l'article L. 47, a ou b, selon que la radiation des cadres n'a pas ou a été prononcée pour
-infirmité, d'une allocation temporaire égale à 50 p. 100 de ladite solde. La jouissance de cette allocation est limitée à la
-date d'expiration initialement prévue de la solde de réforme de l'ancien militaire.
+Les ayants cause des militaires visés à l'article L. 7 qui sont décédés titulaires d'une solde de réforme bénéficient d'une
+allocation temporaire égale à 50 % de ladite solde. La jouissance de cette allocation est limitée à la date d'expiration
+initialement prévue de la solde de réforme de l'ancien militaire. 
 
 Les ayants cause des militaires servant sous contrat au-delà de la durée légale décédés en activité par suite d'invalidité
 contractée ou non en service avant d'avoir accompli quinze ans de services bénéficient, s'ils ne peuvent prétendre à la
@@ -12,9 +11,13 @@ liquidable.
 
 **Liens relatifs à cet article**
 
+_Modifié par_:
+
+  - Loi n°2005-270 du 24 mars 2005 - art. 95 () JORF 26 mars 2005 en vigueur le 1er juillet 2005
+
 _Cite_:
 
-  - Code des pensions civiles et militaires de retraite L7 et L47
+  - Code des pensions civiles et militaires de retr... - art. L7 (V)
 
 _Cité par_:
 
