--- a/01. Partie législative/Article L47 - 6362779.md
+++ b/01. Partie législative/Article L47 - 6362779.md
@@ -1,21 +1,21 @@
 # Article L47
 
-Les dispositions du chapitre Ier du présent titre sont applicables aux ayants cause des militaires mentionnés à l'article L.
-6.
+Les dispositions du chapitre Ier du présent titre sont applicables aux ayants cause des militaires mentionnés aux articles L.
+6 et L. 7. 
 
 La pension des veuves de maréchaux de France et amiraux de France est fixée à 75 % des émoluments de base servant au calcul
 de la solde de réserve d'un général de division au taux le plus élevé.
 
 **Liens relatifs à cet article**
 
-_Modifié par_:
-
-  - Loi n°2003-775 du 21 août 2003 - art. 59 () JORF 22 août 2003 en vigueur le 1er janvier 2004
-
 _Cite_:
 
-  - Code des pensions civiles et militaires de retrait - art. L6 (M)
+  - Code des pensions civiles et militaires de retr... - art. L6 (V)
 
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Modifié par_:
+
+  - Loi n°2005-270 du 24 mars 2005 - art. 95 () JORF 26 mars 2005 en vigueur le 1er juillet 2005
