--- a/01. Partie législative/Article 0L6 - 6362671.md
+++ b/01. Partie législative/Article 0L6 - 6362671.md
@@ -4,15 +4,7 @@ Le droit à pension est acquis :
 
 1° Aux officiers et aux militaires non officiers qui ont accompli quinze ans de services civils et militaires effectifs ;
 
-2° Sans condition de durée de services, aux officiers et sous-officiers de carrière radiés des cadres par suite d'infirmités.
-
-3° Aux militaires non officiers ne possédant pas le statut de militaires de carrière qui ont accompli plus de cinq ans et
-moins de quinze ans de services effectifs et qui ont été radiés des cadres pour infirmités imputables au service ;
-
-4° Sans condition de durée de services aux militaires non officiers servant par contrat au-delà de la durée légale qui ont
-accompli moins de quinze ans de services effectifs et qui ont été radiés des cadres pour infirmités attribuables à un service
-en opérations de guerre ouvrant droit au bénéfice de campagne double et contractées après l'expiration de la durée légale du
-service militaire obligatoire.
+2° Sans condition de durée de service aux officiers et aux militaires non officiers radiés des cadres par suite d'infirmités.
 
 **Liens relatifs à cet article**
 
@@ -38,10 +30,6 @@ _Cité par_:
   - Code des pensions civiles et militaires de retrait - art. R*83 (Ab)
   - Code des transports - art. L6527-9 (V)
 
-_Modifié par_:
-
-  - Loi n°72-662 1972-07-13 art. 109-1 JORF 14 juillet 1972
-
 **Liens**:
 
   - TXT_SOURCE: Décret n°79-156 du 27 février 1979
@@ -53,3 +41,7 @@ _Modifié par_:
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
+
+_Modifié par_:
+
+  - Loi n°2005-270 du 24 mars 2005 - art. 95 () JORF 26 mars 2005 en vigueur le 1er juillet 2005
