--- a/01. Partie législative/Article 0L9 - 6362677.md
+++ b/01. Partie législative/Article 0L9 - 6362677.md
@@ -86,6 +86,10 @@ _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
 
+**Liens**:
+
+  - SPEC_APPLI: Ordonnance 2005-759 2005-07-04 art. 20 : spécificités d'application
+
 _Modifié par_:
 
-  - Loi n°2005-1579 du 19 décembre 2005 - art. 87 (V) JORF 20 décembre 2005
+  - Ordonnance n°2005-759 du 4 juillet 2005 - art. 19 () JORF 6 juillet 2005 en vigueur le 1er juillet 2006
