--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R*32 - 6362939.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R*32 - 6362939.md
@@ -1,6 +1,6 @@
 # Article R*32
 
-Pour l'application des règles de cumul prévues aux articles L. 84 à L. 88, la majoration pour enfants s'ajoute à la pension.
+Pour l'application des règles de cumul prévues aux articles L. 84 à L. 88, la majoration pour enfants s'ajoute à la pension. 
 
 Les règles de prescription, de suspension et de paiement applicables à la pension sont également applicables à la majoration
 pour enfants.
@@ -13,8 +13,8 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2003-1305 du 26 décembre 2003 - art. 14 () JORF 30 décembre 2003 en vigueur le 1er janvier 2004
+  - Décret n°2006-1582 du 12 décembre 2006 - art. 1 () JORF 13 décembre 2006
 
 _Cite_:
 
-  - Code des pensions civiles et militaires de retraite L84 à L88
+  - Code des pensions civiles et militaires de retr... - art. L84 (V)
