--- a/01. Partie législative/Article L51 - 6362788.md
+++ b/01. Partie législative/Article L51 - 6362788.md
@@ -1,7 +1,12 @@
 # Article L51
 
-Les officiers généraux placés dans la deuxième section de l'état-major général reçoivent une solde de réserve égale au taux
-de la pension à laquelle ils auraient droit s'ils étaient en position de retraite.
+Les officiers généraux âgés de moins de soixante-sept ans  placés dans la deuxième section de l'état-major général reçoivent
+une solde de réserve égale au taux de la pension à laquelle ils auraient droit s'ils étaient en position de retraite.
+
+**Nota:**
+
+Loi n° 2010-1330 du 9 novembre 2010, article 118 II : Les dispositions de l'article 39 sont applicables aux pensions prenant
+effet à compter du 1er juillet 2011.
 
 **Liens relatifs à cet article**
 
@@ -13,6 +18,10 @@ _Cité par_:
   - Code des pensions civiles et militaires de retr... - art. D39 (V)
   - Code des pensions civiles et militaires de retr... - art. R58 (V)
   - Code des pensions militaires d'invalidité et de... - art. L186 (VT)
+
+_Modifié par_:
+
+  - Loi n°2010-1330 du 9 novembre 2010 - art. 39
 
 _Codifié par_:
 
