--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R44 - 6362969.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R44 - 6362969.md
@@ -1,17 +1,22 @@
 # Article R44
 
 Lorsque les fonctionnaires auxquels le présent paragraphe s'applique ou leurs ayants cause bénéficient du montant garanti
-prévu au dernier alinéa de l'article L. 28 ou au premier alinéa de l'article L. 30, la majoration pour enfants prévue à
-l'article L. 18 ou à l'article L. 38 est calculée sur la base de ce montant garanti.
+prévu au dernier alinéa de l'article L. 28 ou à l'article L. 30, la majoration pour enfants prévue à l'article L. 18 ou à
+l'article L. 38 est calculée sur la base de ce montant garanti.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°66-809 1966-10-28
+  - Décret n°66-809 du 28 octobre 1966
+
+_Modifié par_:
+
+  - Décret n°2015-103 du 2 février 2015 - art. 4
 
 _Cite_:
 
-  - Code des pensions civiles et militaires de retrait - art. L18 (M)
-  - Code des pensions civiles et militaires de retrait - art. L28 (M)
-  - Code des pensions civiles et militaires de retraite L18, L28, L30 al. 1 et L38
+  - Code des pensions civiles et militaires de retr... - art. L18 (V)
+  - Code des pensions civiles et militaires de retr... - art. L28 (V)
+  - Code des pensions civiles et militaires de retr... - art. L30 (V)
+  - Code des pensions civiles et militaires de retr... - art. L38 (V)
