--- a/01. Partie législative/Article L56 - 6362796.md
+++ b/01. Partie législative/Article L56 - 6362796.md
@@ -9,21 +9,21 @@ objet d'exécuter les condamnations à des réparations civiles ou aux frais dus
 de procédure pénale et que ces condamnations ont été prononcées à l'encontre d'une personne qui a été jugée coupable de crime
 ou complicité de crime contre l'humanité. 
 
-La majoration spéciale prévue au deuxième alinéa de l'article L. 30 est insaisissable, sauf pour le paiement des frais
-d'entretien du bénéficiaire, des rémunérations dues aux personnes assurant son assistance ou des cotisations sociales
-obligatoires attachées à ces rémunérations.
+La majoration spéciale prévue à l'article L. 30 bis est insaisissable, sauf pour le paiement des frais d'entretien du
+bénéficiaire, des rémunérations dues aux personnes assurant son assistance ou des cotisations sociales obligatoires attachées
+à ces rémunérations.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Loi n°2009-526 du 12 mai 2009 - art. 44
+  - Loi n°2011-1977 du 28 décembre 2011 - art. 163 (V)
 
 _Cite_:
 
   - Code des pensions civiles et militaires de retr... - art. L17 (V)
-  - Code des pensions civiles et militaires de retr... - art. L30 (V)
-  - Code de procédure pénale - art. 375
+  - Code des pensions civiles et militaires de retr... - art. L30 bis (V)
+  - Code de procédure pénale - art. 375 (V)
   - Code de la sécurité sociale. - art. L355-2 (V)
 
 _Cité par_:
