--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R42 - 6362967.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R42 - 6362967.md
@@ -1,15 +1,20 @@
 # Article R42
 
-Pour le fonctionnaire mis à la retraite au titre de l'article L. 27, le montant garanti prévu au premier alinéa de l'article
-L. 30 s'applique à la seule pension rémunérant les services, la rente d'invalidité et la majoration spéciale pour assistance
-d'une tierce personne étant accordées en sus de ce montant.
+Pour le fonctionnaire mis à la retraite au titre de l'article L. 27, le montant garanti prévu à l'article L. 30 s'applique à
+la seule pension rémunérant les services, la rente d'invalidité et la majoration spéciale pour assistance d'une tierce
+personne étant accordées en sus de ce montant.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°66-809 1966-10-28
+  - Décret n°66-809 du 28 octobre 1966
+
+_Modifié par_:
+
+  - Décret n°2015-103 du 2 février 2015 - art. 4
 
 _Cite_:
 
-  - Code des pensions civiles et militaires de retraite L27 et L30 al. 1
+  - Code des pensions civiles et militaires de retr... - art. L27 (V)
+  - Code des pensions civiles et militaires de retr... - art. L30 (V)
