--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R57 - 6362988.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R57 - 6362988.md
@@ -2,21 +2,22 @@
 
 Lorsque le conjoint survivant ou divorcé demande le rétablissement de son droit à pension en vertu du dernier alinéa de
 l'article L. 46, ce droit prend effet à compter de la date du nouveau veuvage, du divorce ou de la cessation du concubinage
-notoire.
+notoire. 
 
-La pension éventuellement attribuée aux enfants âgés de moins de vingt et un ans est annulée à compter de la demande de
-rétablissement.
+La pension attribuée aux enfants âgés de moins de vingt et un ans est révisée conformément aux dispositions prévues au b de
+l'article L. 43 à compter de la demande de rétablissement.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°66-809 1966-10-28
+  - Décret n°66-809 du 28 octobre 1966
 
 _Modifié par_:
 
-  - Décret n°2003-1305 du 26 décembre 2003 - art. 21 () JORF 30 décembre 2003 en vigueur le 1er janvier 2004
+  - Décret n°2015-103 du 2 février 2015 - art. 1
 
 _Cite_:
 
-  - Code des pensions civiles et militaires de retrait - art. L46 (V)
+  - Code des pensions civiles et militaires de retr... - art. L43 (V)
+  - Code des pensions civiles et militaires de retr... - art. L46 (V)
