--- a/03. Partie réglementaire - Décrets simples/Article D27 - 6362588.md
+++ b/03. Partie réglementaire - Décrets simples/Article D27 - 6362588.md
@@ -1,22 +1,32 @@
 # Article D27
 
-Si le fonctionnaire a été justiciable direct de la Cour des comptes, soit en deniers, soit en matières, il doit produire un
-certificat, soit du directeur de la comptabilité publique, soit du ministre compétent constatant, sauf justification
-ultérieure du quitus de la Cour des comptes, que la vérification provisoire de sa gestion ne révèle aucun débet à sa charge.
+En vue de la concession des prestations d'invalidité, les  administrations, établissements, offices de l'Etat ou tous autres
+organismes employeurs des fonctionnaires de l'Etat, magistrats et  militaires constituent des dossiers, transmis au service
+des retraites  de l'Etat, dans lesquels figurent : 
 
-Si le prétendant à pension n'est pas justiciable direct de la Cour des comptes, sa situation, en fin de gestion, est
-constatée par un certificat du comptable supérieur duquel il relève.
+- la demande de mise à la retraite pour invalidité ; 
 
-S'il est constaté dans la gestion un déficit qui ne soit pas de nature à entraîner à l'encontre du comptable la suspension du
-droit à pension édictée par l'article L. 59, la proposition de pension est appuyée d'un rapport détaillé établissant qu'aucun
-détournement de deniers ou de matières n'a été relevé à la charge de l'intéressé et qu'aucune malversation n'a été constatée
-dans sa gestion. Les conclusions de ce rapport doivent être approuvées par le ministre des finances.
+- le cas échéant, la copie de la carte d'invalidité ; 
+
+-  les procès-verbaux des instances médicales obligatoirement saisies en  vertu des lois et règlements applicables à la
+situation de l'intéressé  accompagnés des pièces justificatives médicales et administratives  produites à ces organismes.
+
+**Nota:**
+
+Décret n° 2011-616 du 30 mai 2011, article 6 et décret n° 2013-39 du 10 janvier 2013, article 2 : Les présentes dispositions
+prennent effet à l'égard des employeurs de fonctionnaires, magistrats et militaires chacun pour ce qui le concerne, à une
+date et selon les modalités fixées par arrêté conjoint des ministres chargés du budget et de la fonction publique et du
+ministre concerné et au plus tard le 31 décembre 2014.
+
+Jusqu'à cette date, la pension ou la rente viagère d'invalidité des agents des employeurs en cause est liquidée et concédée
+dans les conditions prévues aux articles D. 21-1 et D. 21-2 dans leur rédaction antérieure à l'entrée en vigueur du présent
+décret.
 
 **Liens relatifs à cet article**
 
-_Abrogé par_:
+_Modifié par_:
 
-  - Décret n°2003-1309 du 26 décembre 2003 - art. 27 () JORF 30 décembre 2003 en vigueur le 1er janvier 2004
+  - Décret n°2011-616 du 30 mai 2011 - art. 4
 
 _Cité par_:
 
@@ -34,11 +44,3 @@ _Cité par_:
 _Cite_:
 
   - Code des pensions civiles et militaires de retrait - art. L59 (Ab)
-
-_Codifié par_:
-
-  - Décret n°66-810 1966-10-28
-
-_Créé par_:
-
-  - Décret n°66-810 1966-10-28 JORF 3 novembre 1966 rectificatif JORF 3 décembre 1966 en vigueur le 1er décembre 1964
