--- a/01. Partie législative/Article L14 - 6362703.md
+++ b/01. Partie législative/Article L14 - 6362703.md
@@ -1,7 +1,7 @@
 # Article L14
 
-I.-La durée d'assurance totalise la durée des services et bonifications admissibles en liquidation prévue à l'article L. 13,
-augmentée, le cas échéant, de la durée d'assurance et des périodes reconnues équivalentes validées dans un ou plusieurs
+I. – La durée d'assurance totalise la durée des services et bonifications admissibles en liquidation prévue à l'article L.
+13, augmentée, le cas échéant, de la durée d'assurance et des périodes reconnues équivalentes validées dans un ou plusieurs
 autres régimes de retraite de base obligatoires. 
 
 Lorsque la durée d'assurance est inférieure au nombre de trimestres nécessaire pour obtenir le pourcentage de la pension
@@ -20,11 +20,11 @@ Le nombre de trimestres correspondant est arrondi à l'entier supérieur dans de
 des deux nombres de trimestres résultant des dispositions du 1° et du 2° du présent I est pris en considération. 
 
 Le coefficient de minoration n'est pas applicable aux fonctionnaires handicapés dont l'incapacité permanente est au moins
-égale à 80 % ou mis à la retraite pour invalidité ainsi qu'aux fonctionnaires âgés d'au moins soixante-cinq ans qui
-bénéficient d'un nombre minimum de trimestres fixé par décret au titre de la majoration de durée d'assurance prévue à
-l'article L. 12 ter ou qui, pendant une durée et dans des conditions fixées par décret, ont apporté une aide effective à leur
-enfant bénéficiaire de l'élément de la prestation relevant du 1° de l'article L. 245-3 du code de l'action sociale et des
-familles. 
+égale à un taux fixé par décret ou mis à la retraite pour invalidité ainsi qu'aux fonctionnaires âgés d'au moins soixante-
+cinq ans qui bénéficient d'un nombre minimum de trimestres fixé par décret au titre de la majoration de durée d'assurance
+prévue à l'article L. 12 ter ou qui, pendant une durée et dans des conditions fixées par décret, ont apporté une aide
+effective à leur enfant bénéficiaire de l'élément de la prestation relevant du 1° de l'article L. 245-3 du code de l'action
+sociale et des familles. 
 
 Le coefficient de minoration n'est pas applicable aux pensions de réversion lorsque la liquidation de la pension dont le
 fonctionnaire aurait pu bénéficier intervient après son décès. 
@@ -32,7 +32,7 @@ fonctionnaire aurait pu bénéficier intervient après son décès.
 Pour le calcul de la durée d'assurance, les périodes de services accomplis à temps partiel telles que définies à l'article L.
 5 sont décomptées comme des périodes de services à temps complet. 
 
-II.-Les dispositions du I sont applicables aux militaires dont la limite d'âge est supérieure ou égale à cinquante-sept ans
+II. – Les dispositions du I sont applicables aux militaires dont la limite d'âge est supérieure ou égale à cinquante-sept ans
 lorsqu'ils sont mis à la retraite à compter de l'âge de cinquante-deux ans. Les dispositions suivantes s'appliquent aux
 militaires qui ne remplissent pas ces conditions. 
 
@@ -56,7 +56,7 @@ des deux nombres de trimestres résultant des dispositions du 1° et du 2° du p
 
 Le coefficient de minoration n'est pas applicable aux militaires radiés des cadres par suite d'infirmité. 
 
-III.-Lorsque la durée d'assurance, définie au premier alinéa du I, est supérieure au nombre de trimestres nécessaires pour
+III. – Lorsque la durée d'assurance, définie au premier alinéa du I, est supérieure au nombre de trimestres nécessaires pour
 obtenir le pourcentage maximum mentionné à l'article L. 13 et que le fonctionnaire civil a atteint l'âge mentionné à
 l'article L. 161-17-2 du code de la sécurité sociale, un coefficient de majoration s'applique au montant de la pension
 liquidée en application des articles L. 13 et L. 15. 
@@ -69,8 +69,8 @@ sécurité sociale et en sus du nombre de trimestres nécessaires pour obtenir l
 Toutefois, les bonifications de durée de services et majorations de durée d'assurance, à l'exclusion de celles accordées au
 titre des enfants et du handicap, prévues par les dispositions législatives et réglementaires, quel que soit le régime de
 retraite de base au titre duquel elles ont été acquises, ne sont pas prises en compte pour le calcul de la durée d'assurance
-mentionnée au premier alinéa du présent III . Un décret fixe la liste des bonifications et majorations de durée auxquelles
-s'applique le présent alinéa.
+mentionnée au premier alinéa du présent III. Un décret fixe la liste des bonifications et majorations de durée auxquelles
+s'applique le présent alinéa. 
 
 Sont pris en compte pour ce calcul les trimestres entiers cotisés. 
 
@@ -78,9 +78,8 @@ Le coefficient de majoration est de 1,25 % par trimestre supplémentaire.
 
 **Nota:**
 
-Loi n° 2011-1906 du 21 décembre 2011 article 86 V : Le présent article n'est pas applicable aux assurés qui remplissent,
-avant le 1er janvier 2013, les conditions d'âge et de durée d'assurance ouvrant droit au bénéfice de la majoration de pension
-prévue au III du présent article dans sa rédaction antérieure au 23 décembre 2011.
+Conformément à l'article 37 IV de la loi n° 2014-40 du 20 janvier 2014,   l'article L14, dans sa rédaction issue de la
+présente loi, est   applicable aux pensions prenant effet à compter du 1er février 2014.
 
 **Liens relatifs à cet article**
 
@@ -131,11 +130,12 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2011-1906 du 21 décembre 2011 - art. 86 (V)
+  - Loi n°2014-40 du 20 janvier 2014 - art. 37 (V)
 
 _Cite_:
 
+  - Code des pensions civiles et militaires de retr... - art. L24 (V)
   - Code des pensions civiles et militaires de retraite - art. L13
   - Code des pensions civiles et militaires de retraite - art. L15
-  - Code de la sécurité sociale. - art. L161-17-2
-  - Code de l'action sociale et des familles - art. L245-3
+  - Code de la sécurité sociale. - art. L161-17-2 (V)
+  - Code de la sécurité sociale. - art. L245-3 (V)
