--- a/01. Partie législative/Article 0L6 - 6362671.md
+++ b/01. Partie législative/Article 0L6 - 6362671.md
@@ -1,10 +1,16 @@
 # Article L6
 
-Le droit à pension est acquis :
+Le droit à pension est acquis : 
 
-1° Aux officiers et aux militaires non officiers qui ont accompli quinze ans de services civils et militaires effectifs ;
+1° Aux officiers et aux militaires non officiers après la durée fixée par le décret en Conseil d'Etat mentionné au 1° de
+l'article L. 4 ; 
 
 2° Sans condition de durée de service aux officiers et aux militaires non officiers radiés des cadres par suite d'infirmités.
+
+**Nota:**
+
+Conformément à l'article 42 II de la loi n° 2014-40 du 20 janvier 2014,  l'article 42 est applicable aux militaires dont le
+premier engagement a  été conclu à compter du 1er janvier 2014.
 
 **Liens relatifs à cet article**
 
@@ -38,10 +44,14 @@ _Cité par_:
   - TXT_SOURCE: Décret n°79-156 du 27 février 1979 - art. 3 (V)
   - TXT_SOURCE: Décret n°79-156 du 27 février 1979 - art. 4 (V)
 
+_Modifié par_:
+
+  - Loi n°2014-40 du 20 janvier 2014 - art. 42 (V)
+
+_Cite_:
+
+  - Code des pensions civiles et militaires de retraite - art. L4
+
 _Codifié par_:
 
   - Loi n°64-1339 1964-12-29
-
-_Modifié par_:
-
-  - Loi n°2005-270 du 24 mars 2005 - art. 95 () JORF 26 mars 2005 en vigueur le 1er juillet 2005
