--- a/01. Partie législative/Article L13 - 6362701.md
+++ b/01. Partie législative/Article L13 - 6362701.md
@@ -1,15 +1,27 @@
 # Article L13
 
-I.-La durée des services et bonifications admissibles en liquidation s'exprime en trimestres. Le nombre de trimestres
-nécessaires pour obtenir le pourcentage maximum de la pension civile ou militaire est fixé à cent soixante trimestres. 
+I. – La durée des services et bonifications admissibles en liquidation s'exprime en trimestres. Le nombre de trimestres
+nécessaires pour obtenir le pourcentage maximum de la pension civile ou militaire est fixé à cent soixante trimestres.
 
-Ce pourcentage maximum est fixé à 75 % du traitement ou de la solde mentionné à l'article L. 15. 
+Ce pourcentage maximum est fixé à 75 % du traitement ou de la solde mentionné à l'article L. 15.
 
 Chaque trimestre est rémunéré en rapportant le pourcentage maximum défini au deuxième alinéa au nombre de trimestres
-mentionné au premier alinéa. 
+mentionné au premier alinéa.
 
-II.-Le nombre de trimestres mentionné au premier alinéa du I évolue dans les conditions définies, pour la durée d'assurance
+II. – Le nombre de trimestres mentionné au premier alinéa du I évolue dans les conditions définies, pour la durée d'assurance
 ou de services, à l'article 5 de la loi n° 2003-775 du 21 août 2003 portant réforme des retraites.
+
+III. – Pour les assurés nés à compter du 1er janvier 1958, la durée des services et bonifications évolue dans les conditions
+prévues à l'article L. 161-17-3 du code de la sécurité sociale. Par dérogation, la durée des services et bonifications exigée
+des fonctionnaires de l'Etat et des militaires qui remplissent les conditions de liquidation d'une pension avant l'âge de
+soixante ans est celle exigée des fonctionnaires atteignant cet âge l'année à compter de laquelle la liquidation peut
+intervenir.
+
+**Nota:**
+
+Loi n° 2014-40 du 20 janvier 2014, article 2 IV : Le III de l'article L. 13 du code des pensions civiles et militaires de
+retraite s'applique aux fonctionnaires affiliés à la Caisse nationale de retraites des agents des collectivités locales et
+aux ouvriers des établissements industriels de l'Etat.
 
 **Liens relatifs à cet article**
 
@@ -96,17 +108,14 @@ _Cité par_:
   - Code des pensions civiles et militaires de retr... - art. R37 bis (V)
   - Code des pensions civiles et militaires de retrait - art. L24 (M)
 
-**Liens**:
-
-  - SPEC_APPLI: Loi n°2003-775 2003-08-21 art. 66 : Réserves
-
 _Cite_:
 
-  - Loi n°2003-775 du 21 août 2003 - art. 5 (V)
+  - Loi n°2003-775 du 21 août 2003 - art. 5
+  - Code de la sécurité sociale. - art. L161-17-3
 
 _Modifié par_:
 
-  - Loi n°2003-775 du 21 août 2003 - art. 51 () JORF 22 août 2003 en vigueur le 1er janvier 2004
+  - Loi n°2014-40 du 20 janvier 2014 - art. 2 (V)
 
 _Codifié par_:
 
