--- a/01. Partie législative/Article L50 - 6362786.md
+++ b/01. Partie législative/Article L50 - 6362786.md
@@ -1,43 +1,46 @@
 # Article L50
 
-I.-En cas de décès d'un fonctionnaire civil ou militaire par suite d'un attentat, d'une lutte dans l'exercice de ses
+I. – En cas de décès d'un fonctionnaire civil ou militaire par suite d'un attentat, d'une lutte dans l'exercice de ses
 fonctions, d'un acte de dévouement dans un intérêt public ou pour sauver la vie d'une ou plusieurs personnes, une pension de
 réversion est concédée aux conjoints. A cette pension de réversion s'ajoute soit la moitié de la rente viagère d'invalidité
 dont aurait pu bénéficier le fonctionnaire, soit la pension prévue au code des pensions militaires d'invalidité, de manière à
 ce que le total ne soit pas inférieur à un montant correspondant à la valeur de l'indice majoré 227 au 1er janvier 2004,
-revalorisé dans les conditions prévues à l'article L. 341-6 du code de la sécurité sociale. 
+revalorisé dans les conditions prévues à l'article L. 341-6 du code de la sécurité sociale.
 
-II.-Le total des pensions et, selon les cas, de la rente viagère d'invalidité ou de la pension militaire d'invalidité
+II. – Le total des pensions et, selon les cas, de la rente viagère d'invalidité ou de la pension militaire d'invalidité
 attribuables aux conjoints survivants et aux orphelins ne peut être inférieur à celui de la pension et de la rente viagère
 d'invalidité ou de la pension militaire d'invalidité dont le fonctionnaire ou le militaire aurait pu bénéficier, si le décès
-intervient dans les conditions suivantes : 
+intervient dans les conditions suivantes :
 
-1° Lorsqu'un fonctionnaire des douanes de la branche de la surveillance est tué au cours d'une opération douanière ; 
+1° Lorsqu'un fonctionnaire des douanes de la branche de la surveillance est tué au cours d'une opération douanière ;
 
 2° Lorsqu'un fonctionnaire de la police nationale est tué au cours d'une opération de police ou décède en service et est cité
-à l'ordre de la Nation ; 
+à l'ordre de la Nation ;
 
 3° Lorsqu'un militaire de la gendarmerie nationale est tué au cours d'une opération de police ou décède en service et est
-cité à l'ordre de la Nation ou à l'ordre de la gendarmerie ; 
+cité à l'ordre de la Nation ou à l'ordre de la gendarmerie ;
 
 4° Lorsqu'un fonctionnaire appartenant au personnel de l'administration pénitentiaire décède à la suite d'un acte de violence
-dans le cadre de l'exercice de ses fonctions ; 
+dans le cadre de l'exercice de ses fonctions ;
 
 5° Lorsqu'un sapeur-pompier de la brigade des sapeurs-pompiers de Paris ou du bataillon des marins-pompiers de Marseille ou
 un militaire des formations militaires de la sécurité civile est tué dans l'exercice de ses fonctions et est cité à l'ordre
-de la Nation ; 
+de la Nation ou à l'ordre de l'armée ;
 
 6° Lorsqu'un agent d'exploitation des travaux publics de l'Etat ou un chef d'équipe des travaux publics de l'Etat est tué en
-service dans le cadre d'une intervention sur voirie circulée ; 
+service dans le cadre d'une intervention sur voirie circulée ;
 
 7° Lorsqu'un contrôleur des transports terrestres est tué en service dans le cadre de l'exercice de ses missions de contrôle
-sur route ; 
+sur route ;
 
 8° Lorsqu'un fonctionnaire affecté dans les services exerçant des missions de contrôle dans le domaine des affaires maritimes
 sous l'autorité ou à la disposition du ministre chargé de la mer est tué en service au cours d'une mission de contrôle ou de
-surveillance. 
+surveillance ;
 
-III.-Le total des pensions et, selon les cas, de la rente viagère ou de la pension militaire d'invalidité attribuables aux
+9° Lorsqu'un militaire est tué dans l'exercice de ses fonctions sur le territoire national ou décède en service et est cité à
+l'ordre de la Nation ou à l'ordre de l'armée.
+
+III. – Le total des pensions et, selon les cas, de la rente viagère ou de la pension militaire d'invalidité attribuables aux
 conjoints survivants et aux orphelins est porté à 100 % du traitement ou de la solde de base détenu par le fonctionnaire ou
 le militaire au jour de son décès lorsqu'un fonctionnaire, un militaire de carrière ou un militaire servant sous contrat est
 tué dans un attentat alors qu'il se trouvait en service sur le territoire national ou à l'étranger ou au cours d'une
@@ -55,11 +58,11 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2014-40 du 20 janvier 2014 - art. 5 (V)
+  - Loi n°2016-1917 du 29 décembre 2016 - art. 121 (V)
 
 _Cite_:
 
-  - Code de la sécurité sociale. - art. L341-6 (V)
+  - Code de la sécurité sociale. - art. L341-6
 
 _Codifié par_:
 
