--- a/01. Partie législative/Article L86 - 6362847.md
+++ b/01. Partie législative/Article L86 - 6362847.md
@@ -1,12 +1,12 @@
 # Article L86
 
-I.-Par dérogation au premier alinéa de l'article L. 161-22 du code de la sécurité sociale, ainsi qu'aux dispositions du
+I. – Par dérogation au premier alinéa de l'article L. 161-22 du code de la sécurité sociale, ainsi qu'aux dispositions du
 deuxième alinéa de l'article L. 84 et de l'article L. 85, les revenus perçus à l'occasion de l'exercice des activités
 suivantes peuvent être entièrement cumulés avec la pension : 
 
 1° Activités entraînant affiliation au régime général de la sécurité sociale en application du 15° de l'article L. 311-3 et
 de l'article L. 382-1 du code de la sécurité sociale ainsi que les activités exercées par les artistes interprètes rattachés
-au régime mentionné au premier alinéa de l'article L. 622-5 du même code ; 
+au régime mentionné au premier alinéa de l'article L. 640-1 du même code ; 
 
 2° Activités entraînant la production d'oeuvres de l'esprit au sens des articles L. 112-2 et L. 112-3 du code de la propriété
 intellectuelle ; 
@@ -14,7 +14,7 @@ intellectuelle ;
 3° Participation aux activités juridictionnelles ou assimilées, ou à des instances consultatives ou délibératives réunies en
 vertu d'un texte législatif ou réglementaire. 
 
-II.-En outre, par dérogation aux mêmes dispositions, peuvent cumuler intégralement le montant de leur pension avec des
+II. – En outre, par dérogation aux mêmes dispositions, peuvent cumuler intégralement le montant de leur pension avec des
 revenus d'activité : 
 
 1° Les titulaires de pensions civiles et militaires ou d'une solde de réforme allouées pour invalidité ; 
@@ -26,11 +26,6 @@ effectués pendant un rappel à l'activité donnant lieu à promotion de grade ;
 
 3° Les titulaires de pensions ayant atteint, avant le 1er janvier 2004, la limite d'âge qui leur était applicable dans leur
 ancien emploi.
-
-**Nota:**
-
-Conformément à l'article 19 VIII de la loi n° 2014-40 du 20 janvier 2014, le présent article est applicable aux assurés dont
-la première pension prend effet à compter du 1er janvier 2015.
 
 **Liens relatifs à cet article**
 
@@ -44,16 +39,16 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2014-40 du 20 janvier 2014 - art. 19 (V)
+  - Loi n°2016-1827 du 23 décembre 2016 - art. 50 (V)
 
 _Cite_:
 
   - Code de la propriété intellectuelle - art. L112-2
   - Code des pensions civiles et militaires de retraite - art. L85
   - Code de la sécurité sociale. - art. L161-22
-  - Code de la sécurité sociale. - art. L311-3
+  - Code de la sécurité sociale. - art. L311-3 (V)
   - Code de la sécurité sociale. - art. L382-1
-  - Code de la sécurité sociale. - art. L622-5
+  - Code de la sécurité sociale. - art. L640-1 (V)
 
 _Codifié par_:
 
