--- a/03. Partie réglementaire - Décrets simples/Article D20 - 6362572.md
+++ b/03. Partie réglementaire - Décrets simples/Article D20 - 6362572.md
@@ -1,14 +1,17 @@
 # Article D20
 
-I. - Le fonctionnaire, le magistrat ou le militaire dépose sa demande de pension six mois avant la date à laquelle il
-souhaite cesser son activité auprès du service des retraites de l'Etat. 
+I. – Le fonctionnaire, le magistrat ou le militaire dépose sa demande de pension six mois avant la date à laquelle il
+souhaite cesser son activité auprès du service des retraites de l'Etat ou, pour les demandes de pension d'invalidité prévue
+aux articles L. 27 à L. 37 ou de pension de retraite prévue au 4° du I et au 3° du II de l'article L. 24, auprès du service
+gestionnaire dont il relève.
 
 La pension est concédée au plus tard un mois avant la date d'effet de la radiation des cadres. Toutefois, en cas de maintien
 en fonctions ou en activité en surnombre, au-delà de la limite d'âge, la pension est concédée au plus tard un mois avant le
-terme de ce maintien. 
+terme de ce maintien.
 
-II. - L'ayant cause du fonctionnaire, du magistrat ou du militaire décédé avant ou après son admission à la retraite dépose
-sa demande de pension de réversion auprès du service des retraites de l'Etat.
+II. – L'ayant cause du fonctionnaire, du magistrat ou du militaire dépose sa demande de pension de réversion auprès du
+service des retraites de l'Etat ou, lorsque le fonctionnaire, le magistrat ou le militaire décède avant son admission à la
+retraite, auprès du service gestionnaire dont l'agent décédé relevait.
 
 **Nota:**
 
@@ -42,6 +45,24 @@ entreprises et du conseil général de l'économie, de l'industrie, de l'énergi
 générale du Trésor et de l'inspection générale des finances, les dispositions de l'article D. 20 du code des pensions civiles
 et militaires de retraite, dans sa rédaction issue du décret du 10 janvier 2013 susvisé, prennent effet le 1er janvier 2016.
 
+Arrêté du 11 août 2016 : A l'égard des services du rectorat de l'académie de Nancy-Metz, les dispositions des articles D. 1,
+D. 20 et D. 21 du code des pensions civiles et militaires de retraite, dans leur rédaction issue du décret du 10 janvier 2013
+susvisé, prennent effet le 1er septembre 2016.
+
+Arrêté du 13 avril 2017 : A l'égard des académies de Besançon, de Caen, de Lyon, d'Orléans-Tours, de Strasbourg et du pôle
+universitaire de Toulouse, les dispositions des articles D.1, D. 20 et D. 21 du code des pensions civiles et militaires de
+retraite, dans leur rédaction issue du décret du 10 janvier 2013 susvisé, prennent effet le 1er septembre 2017.
+
+Arrêté du 27 décembre 2017: A l'égard de la direction générale de la concurrence, de la consommation et de la répression des
+fraudes et du service commun des laboratoires, les dispositions des articles D. 1, D. 20 et D. 21 du code des pensions
+civiles et militaires de retraite, dans leur rédaction issue du décret du 10 janvier 2013 susvisé, prennent effet le 1er
+janvier 2018.
+
+Arrêté du 31 juillet 2018 : A l'égard des Académies d'Aix-Marseille, d'Amiens, de Bordeaux, de Clermont-Ferrand, de Corse, de
+Dijon, de Limoges, de Montpellier, de Rennes, de Rouen et des Pôles universitaires de Lille et de Lorraine, les dispositions
+des articles D. 1, D. 20 et D. 21 du code des pensions civiles et militaires de retraite, dans leur rédaction issue du décret
+du 10 janvier 2013 susvisé, prennent effet le 1er septembre 2018.
+
 **Liens relatifs à cet article**
 
 _Cité par_:
@@ -61,7 +82,12 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2013-39 du 10 janvier 2013 - art. 1
+  - Décret n°2017-17 du 6 janvier 2017 - art. 2
+
+_Cite_:
+
+  - Code des pensions civiles et militaires de retr... - art. L24 (V)
+  - Code des pensions civiles et militaires de retr... - art. L27 (V)
 
 _Codifié par_:
 
