--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R74-1 - 6363024.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R74-1 - 6363024.md
@@ -7,9 +7,10 @@ renouvellement de celui-ci leur a été notifiée.
 
 La demande est présentée par écrit à l'administration dont le fonctionnaire est détaché. 
 
-Le fonctionnaire qui a souscrit à l'option prévue au premier alinéa est redevable de la cotisation mentionnée au 2° de
-l'article L. 61 auprès du comptable unique désigné par arrêté du ministre chargé du budget, selon des modalités fixées par
-arrêté. Le non-respect de cette obligation de versement suspend l'affiliation du fonctionnaire au présent régime. 
+Le fonctionnaire qui a, en application du premier alinéa, demandé à cotiser au régime des pensions civiles et militaires, est
+redevable de la cotisation mentionnée au 2° de l'article L. 61. Cette cotisation est liquidée par l'employeur d'origine et
+versée par le fonctionnaire auprès du comptable unique désigné par arrêté du ministre chargé du budget, selon des modalités
+fixées par arrêté. Le non-respect de cette obligation de versement suspend l'affiliation du fonctionnaire au présent régime. 
 
 Le fonctionnaire qui, dans le délai prescrit, n'a pas exercé son droit d'option, est réputé avoir renoncé à la possibilité de
 cotiser au régime du code des pensions civiles et militaires de retraite. 
@@ -22,7 +23,7 @@ contraire.
 
 _Cite_:
 
-  - Loi n°84-16 du 11 janvier 1984 - art. 46 ter (V)
+  - Loi n°84-16 du 11 janvier 1984 - art. 46 ter
   - Code des pensions civiles et militaires de retraite - art. L61
 
 _Cité par_:
@@ -33,4 +34,4 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2007-1796 du 19 décembre 2007 - art. 7
+  - Décret n°2018-935 du 30 octobre 2018 - art. 2
