--- a/03. Partie réglementaire - Décrets simples/Article D21-2 - 6362576.md
+++ b/03. Partie réglementaire - Décrets simples/Article D21-2 - 6362576.md
@@ -5,28 +5,21 @@ l'Etat au plus tard le 31 janvier de chaque année sous la forme d'une déclarat
 ou établissements de l'Etat ou tous autres organismes employeurs des fonctionnaires de l'Etat, magistrats et militaires qui
 les détiennent. Cette déclaration dématérialisée est effectuée selon le format d'échange commun fixé par arrêté conjoint des
 ministres chargés du budget et de la fonction publique après avis du comité de coordination stratégique en matière de
-retraites de l'Etat. 
+retraites de l'Etat. Le défaut de production, dans le délai prescrit, de cette déclaration ou l'inexactitude des données qui
+y sont portées, peut donner lieu à l'application de pénalités, dans les mêmes conditions que celles prévues au  III de
+l'article R. 133-14 du code de la sécurité sociale . Ces pénalités sont recouvrées au moyen d'un titre de perception émis par
+le directeur du service des retraites de l'Etat. Le recouvrement en est assuré par le comptable de la direction générale des
+finances publiques comme en matière de créances de l'Etat étrangères à l'impôt et au domaine.
 
 Au plus tard deux mois avant la radiation des cadres du fonctionnaire, magistrat ou militaire ou après son décès en activité,
 les administrations, offices ou établissements de l'Etat ou tous autres organismes employeurs des fonctionnaires de l'Etat,
 magistrats et militaires mentionnés au premier alinéa communiquent au service des retraites de l'Etat les données relatives à
 la dernière situation d'activité de l'intéressé nécessaires à la liquidation de sa pension et les informations énumérées à
-l'article D. 21-1. 
+l'article D. 21-1.
 
 Pour assurer sa mission de contrôle, le service des retraites de l'Etat peut demander, y compris après la concession de la
 pension, communication de tout ou partie des pièces justificatives des informations portées au compte individuel de retraite.
 Au vu de ces pièces, toute erreur affectant ces informations peut être rectifiée par le service des retraites de l'Etat.
-
-**Nota:**
-
-Décret n° 2011-616 du 30 mai 2011, article 6 et décret n° 2013-39 du 10 janvier 2013, article 2 : Les présentes dispositions
-prennent effet à l'égard des employeurs de fonctionnaires, magistrats et militaires chacun pour ce qui le concerne, à une
-date et selon les modalités fixées par arrêté conjoint des ministres chargés du budget et de la fonction publique et du
-ministre concerné et au plus tard le 31 décembre 2014.
-
-Jusqu'à cette date, la pension ou la rente viagère d'invalidité des agents des employeurs en cause est liquidée et concédée
-dans les conditions prévues aux articles D. 21-1 et D. 21-2 dans leur rédaction antérieure à l'entrée en vigueur du présent
-décret.
 
 **Liens relatifs à cet article**
 
@@ -65,12 +58,12 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2011-616 du 30 mai 2011 - art. 3
-
-_Cite_:
-
-  - Code des pensions civiles et militaires de retraite - art. D21-1
+  - Décret n°2018-936 du 30 octobre 2018 - art. 1
 
 _Codifié par_:
 
   - Décret n°66-810 du 28 octobre 1966
+
+_Cite_:
+
+  - Code de la sécurité sociale. - art. R133-14
