--- a/01. Partie législative/Article L29 - 6362746.md
+++ b/01. Partie législative/Article L29 - 6362746.md
@@ -5,19 +5,19 @@ résultant pas du service et qui n'a pu être reclassé dans un autre corps en a
 11 janvier 1984 précitée peut être radié des cadres par anticipation soit sur sa demande, soit d'office ; dans ce dernier
 cas, la radiation des cadres est prononcée sans délai si l'inaptitude résulte d'une maladie ou d'une infirmité que son
 caractère définitif et stabilisé ne rend pas susceptible de traitement, ou à l'expiration d'un délai de douze mois à compter
-de sa mise en congé si celle-ci a été prononcée en application de l'article 36 (2°) de l'ordonnance du 4 février 1959
-relative au statut général des fonctionnaires ou à la fin du congé qui lui a été accordé en application de l'article 36 (3°)
-de ladite ordonnance. L'intéressé a droit à la pension rémunérant les services prévue au 2° du I de l'article L. 24 du
-présent code, sous réserve que ses blessures ou maladies aient été contractées ou aggravées au cours d'une période durant
-laquelle il acquérait des droits à pension. Par dérogation à l'article L. 16 du même code, cette pension est revalorisée dans
-les conditions fixées à l'article L. 341-6 du code de la sécurité sociale.
+de sa mise en congé si celle-ci a été prononcée en application du 2° de l'article 34 de la loi n° 84-16 du 11 janvier 1984
+précitée ou à la fin du congé qui lui a été accordé en application des 3° et 4° du même article 34. L'intéressé a droit à la
+pension rémunérant les services prévue au 2° du I de l'article L. 24 du présent code, sous réserve que ses blessures ou
+maladies aient été contractées ou aggravées au cours d'une période durant laquelle il acquérait des droits à pension. Par
+dérogation à l'article L. 16 du même code, cette pension est revalorisée dans les conditions fixées à l'article L. 341-6 du
+code de la sécurité sociale.
 
 **Liens relatifs à cet article**
 
 _Cite_:
 
   - Loi n°84-16 du 11 janvier 1984 - art. 63
-  - Code des pensions civiles et militaires de retr... - art. L16 (V)
+  - Code des pensions civiles et militaires de retraite - art. L16
   - Code des pensions civiles et militaires de retraite - art. L24
   - Code de la sécurité sociale. - art. L341-6
 
@@ -32,7 +32,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2014-40 du 20 janvier 2014 - art. 5 (V)
+  - Loi n°2019-828 du 6 août 2019 - art. 43
 
 _Codifié par_:
 
