--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R71 - 6363019.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R71 - 6363019.md
@@ -1,17 +1,16 @@
 # Article R71
 
 En l'absence de paiement intégral des cotisations et contributions pour pension dans les conditions prévues à l'article R.
-69, l'employeur est passible des majorations prévues à l' article R. 243-18 du code de la sécurité sociale .
+69, l'employeur est passible des majorations prévues aux articles R. 243-16 et R. 243-17 du code de la sécurité sociale.
 
 En cas de défaut de production, dans le délai prescrit, de la déclaration mentionnée à l'article R. 70 ou d'inexactitude des
-données qui y sont portées, l'employeur est passible des pénalités prévues au  III de l'article R. 133-14 du code de la
-sécurité sociale .
+données qui y sont portées, l'employeur est passible des pénalités prévues aux articles R. 243-12 à R. 243-14 du code de la
+sécurité sociale.
 
 **Nota:**
 
-Conformément à l’article 7 du décret n° 2018-935 du 30 octobre 2018, ces dispositions entrent en vigueur à compter du 1er
-novembre 2018, le dernier alinéa de l'article R. 71 entrera en vigueur à compter de la date fixée, pour le régime des
-retraites de l'Etat, par le décret prévu au 1° du III de l'article 13 de l'ordonnance du 18 juin 2015 susvisée.
+Conformément au I de l'article 6 du décret n° 2019-1050 du 11 octobre 2019, les présentes dispositions entrent en vigueur à
+compter du 1er janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -21,9 +20,10 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2018-935 du 30 octobre 2018 - art. 1
+  - Décret n°2019-1050 du 11 octobre 2019 - art. 5
 
 _Cite_:
 
-  - Code de la sécurité sociale. - art. R133-14
-  - Code de la sécurité sociale. - art. R243-18
+  - Code de la sécurité sociale. - art. R243-16
+  - Code de la sécurité sociale. - art. R243-17
+  - articles R. 243-12 à R. 243-14 du code de la sécurité sociale
