--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R39 - 6362964.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R39 - 6362964.md
@@ -3,26 +3,35 @@
 Dans les cas où les infirmités résultant de l'exercice des fonctions au sens de l'article L. 27 proviennent d'un événement
 survenu en dehors des locaux administratifs, cet événement doit être constaté par un procès-verbal en due forme dressé sur
 les lieux et au moment où il est survenu. A défaut de procès-verbal, cette constatation peut s'établir par un acte de
-notoriété dressé devant le juge d'instance, le maire ou, éventuellement, dans les territoires d'outre-mer et pays étrangers,
-par l'autorité administrative qualifiée, sur la déclaration des témoins de l'événement ou des personnes qui ont été à même
-d'en connaître et d'en apprécier les conséquences. Cet acte doit être corroboré par les attestations conformes des supérieurs
-hiérarchiques du fonctionnaire. 
+notoriété dressé devant le   juge du tribunal judiciaire, le maire ou, éventuellement, dans les territoires d'outre-mer et
+pays étrangers, par l'autorité administrative qualifiée, sur la déclaration des témoins de l'événement ou des personnes qui
+ont été à même d'en connaître et d'en apprécier les conséquences. Cet acte doit être corroboré par les attestations conformes
+des supérieurs hiérarchiques du fonctionnaire. 
 
 Dans tous les autres cas spécifiés au même article, ces infirmités et leurs causes sont constatées par les médecins qui ont
 donné leurs soins au fonctionnaire et par un médecin assermenté de l'administration. 
 
 Ces certificats doivent être appuyés de l'avis des supérieurs hiérarchiques du fonctionnaire.
 
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°66-809 1966-10-28
+  - Décret n°66-809 du 28 octobre 1966
 
 _Cité par_:
 
   - Décret n°2019-914 du 30 août 2019 - art.
 
+_Modifié par_:
+
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
+
 _Cite_:
 
-  - Code des pensions civiles et militaires de retr... - art. L27 (V)
+  - Code des pensions civiles et militaires de retraite - art. L27
